kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flais-auth-forward-simple-test-service
  labels:
    app: flais-auth-forward-simple-test-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: flais-auth-forward-simple-test-service
